# epr1516repo_c

./: CMakeLists.txt  libstdc.md
ooa/praktikum1/: main.c  pqueue.c  pqueue.h
ooa/test/: liste.c  liste.h  main.c
pratika1/: c_praktika1.c  c_praktika1.h  martikelnummern.c  praktika1.cpp  praktika1.h  praktika2.c  praktika3.c  praktika4.c  praktika5.c  praktika5.h  praktika6.c  test.c
